# sail-multitran

./: CMakeLists.txt  CMakeLists.txt.user.597e27a  compile_commands.json  sail-multitran.desktop
qml/: sail-multitran.qml
qml/components/: SuggestionListView.qml
qml/dialogs/: LangChoose.qml
qml/pages/: MainPage.qml
rpm/: sail-multitran.changes.in  sail-multitran.changes.run.in  sail-multitran.spec  sail-multitran.yaml
src/: SpartListModel.cpp  SpartListModel.h  SubjectListModel.cpp  SubjectListModel.h  SuggestionListModel.cpp  SuggestionListModel.h  TranslationListModel.cpp  TranslationListModel.h  core.cpp  core.h  demomodel.cpp  demomodel.h  sail-multitran.cpp  spart.cpp  spart.h
